# app-version-inventory

./: .gitignore  Dockerfile  Dockerfile.vscode  README.md  pyproject.toml  sample_manifest.yaml
.devcontainer/: devcontainer.json
src/app_version_inventory/: cli.py
src/app_version_inventory/core/: application.py  dependency.py
src/formatters/: json.py  text.py
src/parsers/: apache.py  identity.py  java.py  mysql.py  node.py  postgres.py  python.py  rails.py  redis.py  ruby.py  shibboleth_sp.py  solr.py  tomcat.py
tests/parsers/: test_apache.py  test_java.py  test_mysql.py  test_node.py  test_postgres.py  test_python.py  test_rails.py  test_redis.py  test_ruby.py  test_shibboleth_sp.py  test_solr.py  test_tomcat.py
